--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -42,10 +42,12 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <br/>
           <span class="glyphicon glyphicon-envelope"></span>
-          <span id="time_counter"></span>
           <field name="timer_start" widget="timer_timer"/>
+          <!-- <script defer="defer">
+            $("[name='timer_start']").addClass("o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold");
+          </script> -->
         </xpath>
-        <field name="timer_start" position="attributes">
+        <field name="timer_start" widget="timer_timer" position="attributes">
           <attribute name="class">o_field_widget o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold</attribute>
         </field>
       </field>
