--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -65,6 +65,30 @@
       </field>
     </record>
 
+    <!-- Task Form View -->
+    <record id="view_task_form_inherit" model="ir.ui.view">
+      <field name="name">task.form.inherit</field>
+      <field name="model">project.task</field>
+      <field name="inherit_id" ref="project.view_task_form2"/>
+      <field name="type">form</field>
+      <field name="arch" type="xml">
+        <field name="partner_id" position="after">
+          <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '!=', False)]}"/>
+        </field>
+      </field>
+    </record>
+
+    <!-- Sale Order Form View -->
+    <!-- <record id="view_sale_order_form_inherit" model="ir.ui.view">
+      <field name="name">sale.order.inherit</field>
+      <field name="model">sale.order</field>
+      <field name="inherit_id" ref="project.view_task_form2"/>
+      <field name="type">form</field>
+      <field name="arch" type="xml">
+        <!-- Custom fields here -->
+      </field>
+    </record> -->
+
     <!-- Product Additions -->
     <record id="product_template_inherit" model="ir.ui.view">
       <field name="name">product.template.product.form</field>
