--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -79,15 +79,18 @@
     </record>
 
     <!-- Sale Order Form View -->
-    <!-- <record id="view_sale_order_form_inherit" model="ir.ui.view">
+    <record id="view_sale_order_form_inherit" model="ir.ui.view">
       <field name="name">sale.order.inherit</field>
       <field name="model">sale.order</field>
-      <field name="inherit_id" ref="project.view_task_form2"/>
+      <field name="inherit_id" ref="	sale.view_order_form"/>
       <field name="type">form</field>
       <field name="arch" type="xml">
         <!-- Custom fields here -->
+        <field name="payment_term_id" position="after">
+          <field name="task" string="Task" attrs="{'invisible':[('task', '!=', False)]}"/>
+        </field>
       </field>
-    </record> -->
+    </record>
 
     <!-- Product Additions -->
     <record id="product_template_inherit" model="ir.ui.view">
