--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -42,8 +42,9 @@
         <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="after">
           <field name="partner_id" widget="res_partner_many2one"/>
           <br/>
-          <span class="o_MessagingMenu_icon fa fa-comments">5</span>
-          <span class="o_MessagingMenu_counter badge badge-pill">5</span>
+          <span class="o_MessagingMenu_icon fa fa-comments"></span>
+          <!-- <span class="o_MessagingMenu_counter badge badge-pill">0</span> -->
+          <field name="message_unread_counter"/>
           <field name="timer_start" widget="timer_timer"/>
           <script defer="defer">
             $("[name='timer_start']").addClass("o_readonly_modifier text-danger ml-auto h5 ml-4 font-weight-bold");
