--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -97,6 +97,20 @@
       </field>
     </record>
 
+    <!-- Project Search View -->
+    <record id="view_project_search_inherit" model="ir.ui.view">
+      <field name="name">project.search.inherit</field>
+      <field name="model">project.project</field>
+      <field name="inherit_id" ref="project.view_project_project_filter "/>
+      <field name="type">search</field>
+      <field name="mode">primary</field>
+      <field name="arch" type="xml">
+        <field name="partner_id" position="after">
+          <filter name="my_store_projects" string="My Store" domain="[('store','=',uid.store)]"/>
+        </field>
+      </field>
+    </record>
+
     <!-- User Form View -->
     <record id="view_res_users_form_inherit" model="ir.ui.view">
       <field name="name">res.users.inherit</field>
