--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -103,11 +103,10 @@
       <field name="model">project.project</field>
       <field name="inherit_id" ref="project.view_project_project_filter"/>
       <field name="type">search</field>
-      <field name="mode">primary</field>
       <field name="arch" type="xml">
-        <field name="partner_id" position="after">
+        <xpath expr="//filter[@string='My Favorites']" position="before">
           <filter name="my_store_projects" string="My Store" domain="[('store','=',uid.store)]"/>
-        </field>
+        </xpath>
       </field>
     </record>
 
