--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -105,7 +105,7 @@
       <field name="type">search</field>
       <field name="arch" type="xml">
         <xpath expr="//filter" position="before">
-          <field name="context" eval="{'search_default_my_store_projects' : 1}"/>
+          <!-- <field name="context" eval="{'search_default_my_store_projects' : 1}"/> -->
           <filter name="my_store_projects" string="My Store" domain="[('store','=',uid)]"/>
         </xpath>
       </field>
