--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -104,7 +104,7 @@
       <field name="inherit_id" ref="project.view_project_project_filter"/>
       <field name="type">search</field>
       <field name="arch" type="xml">
-        <xpath expr="//filter" position="before">
+        <xpath expr="//filter" position="after">
           <!-- <field name="context" eval="{'search_default_my_store_projects' : 1}"/> -->
           <filter name="my_store_projects" string="My Store" domain="[('store','=',uid)]"/>
         </xpath>
