--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -123,7 +123,7 @@
       </field>
     </record>
 
-    <menuitem id="store_root" name="Store" sequence="10" action="view_store"/>
+    <!-- <menuitem id="store_root" name="Store" sequence="10" action="view_store"/> -->
 
 
     <!-- User Form View -->
