--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -121,7 +121,9 @@
         <form string="Store">
           <header>
           </header>
-          <field name="name" string="Store Name" class="o_project_name oe_inline"/>
+          <group>
+            <field name="name" string="Store Name" class="o_project_name oe_inline"/>
+          </group>
         </form>
         <!-- <field name="user_ids" readonly="1"/> -->
       </field>
