--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -121,13 +121,15 @@
         <form string="Store">
           <header>
           </header>
-          <group>
-            <h1>
-              <field name="name" string="Store Name" class="o_field_char o_field_widget o_required_modifier"/>
-            </h1>
-          </group>
+          <sheet>
+            <group>
+              <h1>
+                <field name="name" string="Store Name" class="o_field_char o_field_widget o_required_modifier"/>
+              </h1>
+              <field name="user_ids" readonly="1"/>
+            </group>
+          </sheet>
         </form>
-        <!-- <field name="user_ids" readonly="1"/> -->
       </field>
     </record>
 
