--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -143,6 +143,14 @@
       </field>
     </record>
 
+    <!-- Your Action Window Definition -->
+    <record id="store_window_action" model="ir.actions.act_window">
+        <field name="name">Store</field>
+        <field name="res_model">lume.store</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">list,form</field>
+    </record>
+
     <menuitem id="store_root" name="Store" sequence="10"/>
 
 
