--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -147,7 +147,7 @@
     <record id="store_window_action" model="ir.actions.act_window">
         <field name="name">Store</field>
         <field name="res_model">lume.store</field>
-        <field name="view_type">form</field>
+        <!-- <field name="view_type">form</field> -->
         <field name="view_mode">list,form</field>
     </record>
 
