--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -126,7 +126,7 @@
               <h1>
                 <field name="name" string="Store Name" class="o_field_char o_field_widget o_required_modifier"/>
               </h1>
-              <!-- <field name="user_ids" readonly="1"/> -->
+              <field name="user_ids" readonly="1"/>
             </group>
             <group>
 
