Update search view on project

--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -104,10 +104,9 @@
       <field name="inherit_id" ref="project.view_project_project_filter"/>
       <field name="type">search</field>
       <field name="arch" type="xml">
-        <xpath expr="//filter" position="after">
-          <!-- <field name="context" eval="{'search_default_my_store_projects' : 1}"/> -->
-          <filter name="my_store_projects" string="My Store" domain="[('store','=',uid)]"/>
-        </xpath>
+        <field name="partner_id" string="Customer" filter_domain="[('partner_id', 'child_of', self)]" position="after">
+          <filter string="My Store" name="my_store_projects" domain="[('store.user_ids.id','=',uid)]"/>
+        </field>
       </field>
     </record>
 
