--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -102,11 +102,11 @@
       <field name="name">project.search.inherit</field>
       <field name="model">project.project</field>
       <field name="inherit_id" ref="project.view_project_project_filter"/>
-      <field name="type">search</field>
+      <!-- <field name="type">search</field> -->
       <field name="arch" type="xml">
-        <field name="partner_id" position="after">
+        <xpath expr="//search/group" position="inside">
           <filter string="My Store" name="my_store_projects" domain="[('store.user_ids.id','=',uid)]"/>
-        </field>
+        </xpath>
       </field>
     </record>
 
