--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -9,7 +9,7 @@
                 <xpath expr="//kanban" position="after">
                     <field name="store"/>
                 </xpath>
-                <!-- <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
+                <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
                     <t t-if="store.user_ids.id == uid">
                         <div class="o_kanban_card_content">
                             <div class="o_kanban_primary_left">
@@ -49,7 +49,7 @@
                         <a class="o_kanban_manage_toggle_button o_left" href="#" groups="project.group_project_manager"><i class="fa fa-ellipsis-v" role="img" aria-label="Manage" title="Manage"/></a>
                         <span class="o_right"><field name="is_favorite" widget="boolean_favorite" nolabel="1" force_save="1" /></span>
                     </t>
-                </xpath> -->
+                </xpath>
             </field>
         </record>
 
