--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -1,8 +1,8 @@
 <odoo>
     <data>
 
-        <record id="view_project_kanban_inherit" model="ir.ui.view">
-            <field name="name">project.project.kanban.inherit</field>
+        <record id="view_project_kanban_lume_inherit" model="ir.ui.view">
+            <field name="name">project.project.lume.kanban.inherit</field>
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.view_project_kanban"/>
             <field name="arch" type="xml">
