--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -6,9 +6,9 @@
             <field name="model">project.project</field>
             <field name="inherit_id" ref="project.view_project_kanban"/>
             <field name="arch" type="xml">
-                <!-- <xpath expr="//kanban" position="after">
+                <xpath expr="//kanban/field" position="after">
                     <field name="store"/>
-                </xpath> -->
+                </xpath>
                 <!-- <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
                     <t t-if="store.user_ids.id == uid">
                         <div class="o_kanban_card_content">
