--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -10,7 +10,7 @@
                     <field name="store"/>
                 </xpath>
                 <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
-                    <t t-if="store.user_ids.id == uid">
+                    <t t-if="'store' in locals() and store.user_ids.id == uid">
                     <!-- <t t-if="name != False"> -->
                         <div class="o_kanban_card_content">
                             <div class="o_kanban_primary_left">
