--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -10,9 +10,9 @@
                     <field name="store"/>
                 </xpath> -->
                 <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
-                    <!-- <t t-if="store.user_ids.id == uid"> -->
+                    <t t-if="record.store.user_ids.id == uid">
                     <!-- <t t-if="store != False"> -->
-                    <t t-if="user.store.name == store">
+                    <!-- <t t-if="record.store.name == store"> -->
                         <div class="o_kanban_card_content">
                             <div class="o_kanban_primary_left">
                                 <div class="o_primary">
