--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -13,9 +13,11 @@
                     <!-- <t t-if="record.store.user_ids == uid"> -->
                     <!-- <t t-if="store != False"> -->
                     <t t-set="p_store" t-value="record.store"/>
-                    <t t-set="u_store" t-value="record.env['res.users'].browse([uid])[0]"/>
+                    <t t-set="u_store" t-value="record"/>
                     <!-- <t t-if="record.store != False"> -->
-                    <t t-if="p_store == u_store">
+                    <t t-if="True == True">
+                        <span t-esc="p_store"></span>
+                        <span t-esc="u_store"></span>
                         <div class="o_kanban_card_content">
                             <div class="o_kanban_primary_left">
                                 <div class="o_primary">
