--- a/LumeSales/views/project_view_restrictions.xml
+++ b/LumeSales/views/project_view_restrictions.xml
@@ -12,8 +12,8 @@
                 <xpath expr="//kanban/templates//div[@class='o_project_kanban_main']" position="inside">
                     <!-- <t t-if="record.store.user_ids == uid"> -->
                     <!-- <t t-if="store != False"> -->
-                    <t t-set="p_store" t-value="store"/>
-                    <t t-set="u_store" t-value="store"/>
+                    <t t-set="p_store" t-value="record"/>
+                    <!-- <t t-set="u_store" t-value="store"/> -->
                     <!-- <t t-if="record.store != False"> -->
                     <t t-if="True == True">
                         <!-- <span t-esc="p_store"></span>
