--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -197,13 +197,31 @@
 
 
     <record id="view_project_kanban_lume_inherit_store" model="ir.ui.view">
-            <field name="name">project.project.lume.kanban.inherit.store</field>
-            <field name="model">project.project</field>
-            <field name="inherit_id" ref="project.view_project_kanban"/>
-            <field name="arch" type="xml">
-                <xpath expr="//kanban/field" position="after">
-                    <field name="store"/>
-                </xpath>
+          <field name="name">project.project.lume.kanban.inherit.store</field>
+          <field name="model">project.project</field>
+          <field name="inherit_id" ref="project.view_project_kanban"/>
+          <field name="arch" type="xml">
+              <xpath expr="//kanban/field" position="after">
+                  <field name="store"/>
+              </xpath>
+          </field>
+      </record>
+
+      <record id="open_view_project_all" model="ir.actions.act_window">
+            <field name="name">Projects</field>
+            <field name="res_model">project.project</field>
+            <field name="inherit_id" ref="project.open_view_project_all"/>
+            <field name="domain">[]</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="view_id" ref="view_project_kanban"/>
+            <field name="search_view_id" ref="view_project_project_filter"/>
+            <field name="target">main</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    No projects found. Let's create one!
+                </p><p>
+                    Projects regroup tasks on the same topic and each have their own dashboard.
+                </p>
             </field>
         </record>
   </data>
