Override project action

--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -195,22 +195,10 @@
       </field>
     </record>
 
-
-    <record id="view_project_kanban_lume_inherit_store" model="ir.ui.view">
-          <field name="name">project.project.lume.kanban.inherit.store</field>
-          <field name="model">project.project</field>
-          <field name="inherit_id" ref="project.view_project_kanban"/>
-          <field name="arch" type="xml">
-              <xpath expr="//kanban/field" position="after">
-                  <field name="store"/>
-              </xpath>
-          </field>
-      </record>
-
       <record id="project.open_view_project_all" model="ir.actions.act_window">
             <field name="name">Projects</field>
             <field name="res_model">project.project</field>
-            <field name="domain">['store.user_ids.id','=',uid]</field>
+            <field name="domain">[('store.user_ids.id','=',uid)]</field>
             <field name="view_mode">kanban,form</field>
             <field name="view_id" ref="project.view_project_kanban"/>
             <field name="search_view_id" ref="project.view_project_project_filter"/>
