--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -195,21 +195,9 @@
       </field>
     </record>
 
+      <!-- Adds filter domain for Project window -->
       <record id="project.open_view_project_all" model="ir.actions.act_window">
-            <field name="name">Projects</field>
-            <field name="res_model">project.project</field>
-            <field name="domain">[('store.user_ids.id','=',uid)]</field>
-            <field name="view_mode">kanban,form</field>
-            <field name="view_id" ref="project.view_project_kanban"/>
-            <field name="search_view_id" ref="project.view_project_project_filter"/>
-            <field name="target">main</field>
-            <field name="help" type="html">
-                <p class="o_view_nocontent_smiling_face">
-                    No projects found. Let's create one!
-                </p><p>
-                    Projects regroup tasks on the same topic and each have their own dashboard.
-                </p>
-            </field>
-        </record>
+            <field name="domain">['|',('store.user_ids.id','=',uid),('store','=','False')]</field>
+      </record>
   </data>
 </odoo>
