--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -197,7 +197,17 @@
 
       <!-- Adds filter domain for Project window -->
       <record id="project.open_view_project_all" model="ir.actions.act_window">
-            <field name="domain">['|',('store.user_ids.id','=',uid),('store','=','False')]</field>
+            <field name="domain">['|',('store.user_ids.id','=',uid),('store','=',False)]</field>
       </record>
+
+      <record id="project_project_view_form_simplified_inherit" model="ir.ui.view">
+        <field name="name">project.project.view.form.simplified.inherit</field>
+        <field name="model">project.project</field>
+        <field name="arch" type="xml">
+            <xpath expr="//form/group/field" position="after">
+              <field name="store"/>
+            </xpath>
+        </field>
+        </record>
   </data>
 </odoo>
