--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -203,10 +203,11 @@
       <record id="project_project_view_form_simplified_inherit" model="ir.ui.view">
         <field name="name">project.project.view.form.simplified.inherit</field>
         <field name="model">project.project</field>
+        <field name="inherit_id" ref="project.project_project_view_form_simplified"/>
         <field name="arch" type="xml">
-            <xpath expr="//form/group/field" position="after">
-              <field name="store"/>
-            </xpath>
+          <xpath expr="//form/group/field" position="after">
+            <field name="store"/>
+          </xpath>
         </field>
         </record>
   </data>
