--- a/LumeSales/views/assets.xml
+++ b/LumeSales/views/assets.xml
@@ -6,6 +6,7 @@
             <script type="text/javascript" src="/LumeSales/js/demo.js"></script>
             <script type="text/javascript" src="/LumeSales/js/unread_messages.js"></script>
             <script type="text/javascript" src="/LumeSales/js/live_timer.js"></script>
+            <script type="text/javascript" src="/LumeSales/js/many2one_avatar_partner.js"></script>
         </xpath>
     </template>
     </odoo>
